Dashboard spacing/margins fixes

--- a/client/src/containers/dashboard/index.css
+++ b/client/src/containers/dashboard/index.css
@@ -14,7 +14,7 @@
 .dashboardPageTitle {
   color: #3B3B3B;
   font-size: 30px;
-  font-family: "Raleway";
+  font-family: "Raleway-Bold";
   font-weight: bold;
 }
 
@@ -41,10 +41,9 @@
 
 .dashboardPageTotalsRow > div > h5 {
   color: #FFFFFF;
-  margin: 0;
+  margin: 0 0 20px 0;
   font-size: 14px;
   font-family: 'OpenSans';
-  margin-bottom: 10px;
 }
 
 .dashboardPageTotalsRow > div > p {
@@ -52,7 +51,7 @@
   font-size: 30px;
   line-height: 30px;
   margin: 0;
-  font-family: 'Raleway';
+  font-family: 'Raleway-Medium';
 }
 
 /*Summary Part Style */
